--- a/index.html
+++ b/index.html
@@ -1,24 +1,34 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>My Website</title>
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <header>
-      <h1>Service Arc</h1>
-    </header>
-    <div class="button-container">
-      <button>Left</button>
-      <h2>Area 1</h2>
-      <button>Right</button>
+<head>
+  <title>My Website</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header>
+    <h1>Service Arc</h1>
+  </header>
+  <div class="button-container">
+    <button>Left</button>
+    <h2>Area 1</h2>
+    <button>Right</button>
+  </div>
+  <div id="main-container">
+    <div id="sidebar">
+      <button>Button 1</button>
+      <button>Button 2</button>
+      <input type="text" placeholder="Text Box 1">
+      <input type="text" placeholder="Text Box 2">
     </div>
-    
     <div id="video-container">
-      <div class="video-pane box1"></div>
-      <div class="video-pane box2"></div>
-      <div class="video-pane box3"></div>
-      <div class="video-pane box4"></div>
+      <div class="video-pane1"></div>
+      <div class="traffic-light-panel">
+        <div class="traffic-light"></div>
+      </div>
+      <div class="video-pane2"></div>
+      <div class="video-pane3"></div>
+      <div class="video-pane4"></div>
     </div>
-  </body>
+  </div>
+</body>
 </html>
