--- a/index.html
+++ b/index.html
@@ -23,8 +23,34 @@
     <div id="video-container">
       <div class="video-pane1"></div>
       <div class="traffic-light-panel">
-        <div class="traffic-light"></div>
+        <div class="traffic-light">
+          <div class="circle red"></div>
+          <div class="circle yellow"></div>
+          <div class="circle green"></div>
+        </div>
       </div>
+      <div class="traffic-light-panel2">
+        <div class="traffic-light">
+          <div class="circle red"></div>
+          <div class="circle yellow"></div>
+          <div class="circle green"></div>
+        </div>
+      </div>
+      <div class="traffic-light-panel3">
+        <div class="traffic-light">
+          <div class="circle red"></div>
+          <div class="circle yellow"></div>
+          <div class="circle green"></div>
+        </div>
+      </div>
+      <div class="traffic-light-panel4">
+        <div class="traffic-light">
+          <div class="circle red"></div>
+          <div class="circle yellow"></div>
+          <div class="circle green"></div>
+        </div>
+      </div>
+      
       <div class="video-pane2"></div>
       <div class="video-pane3"></div>
       <div class="video-pane4"></div>
