--- a/index.html
+++ b/index.html
@@ -23,7 +23,13 @@
     <div id="video-container">
       <div class="video-pane1"></div>
       <div class="traffic-light-panel">
-        <div class="traffic-light"></div>
+        <div class="traffic-light">
+        <div class = "circle">
+          <div class="circle-red"></div>
+          <div class="circle-yellow"></div>
+          <div class="circle-green"></div>
+        </div>
+      </div>
       </div>
       <div class="video-pane2"></div>
       <div class="video-pane3"></div>
