--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <script src="script.js"></script>
   <header>
     <h1>Service Arc</h1>
   </header>
@@ -20,6 +21,7 @@
       <input type="text" placeholder="Text Box 1">
       <input type="text" placeholder="Text Box 2">
     </div>
+    
     <div id="video-container">
       <div class="video-pane1"></div>
       <div class="traffic-light-panel">
@@ -50,10 +52,21 @@
           <div class="circle green"></div>
         </div>
       </div>
-      
+      <div class="timer1">
+        <div class="timer-panel"></div>
+      </div>
+      <div class="timer2">
+        <div class="timer-panel"></div>
+      </div>
+      <div class="timer3">
+        <div class="timer-panel"></div>
+      </div>
+      <div class="timer4">
+        <div class="timer-panel"></div>
+      </div>
       <div class="video-pane2"></div>
       <div class="video-pane3"></div>
-      <div class="video-pane4"></div>
+      <div class="video-pane4"></div>  
     </div>
   </div>
 </body>
