--- a/index.html
+++ b/index.html
@@ -52,8 +52,11 @@
           <div class="circle green"></div>
         </div>
       </div>
-      <div class="timer1">
+      <div class="timer">
         <div id="timerPanel"></div>
+        <div id="timerPane2"></div>
+        <div id="timerPane3"></div>
+        <div id="timerPane4"></div>
       </div>
       <div class="video-pane2"></div>
       <div class="video-pane3"></div>
