--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
       <button>Button 2</button>
       <input type="text" placeholder="Text Box 1">
       <input type="text" placeholder="Text Box 2">
+      <input type="text" placeholder="Text Box 3">
+      <input type="text" placeholder="Text Box 4">
     </div>
     
     <div id="video-container">
